# RedRibbon

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: calls.R  rrho.R
data/: PAL_MAvsProt.rda  T2D-D8PG.rda
doc/: Makefile.am
inst/: CITATION
inst/doc/: RedRibbon.html
man/: RRHO.Rd  RedRibbon.Rd  RedRibbon.data.frame.Rd  RedRibbon.numeric.Rd  enrichment.Rd  enrichment.rrho.Rd  ggRedRibbon.Rd  ggRedRibbon.rrho.Rd  ggplot.rrho.Rd  newFC.Rd  newLD.Rd  newLDFIT.Rd  newP.Rd  permutation.Rd  permutation.rrho.Rd  quadrants.Rd  quadrants.rrho.Rd  rectangle_min.Rd  rectangle_min.rrho.Rd  reexports.Rd  rrho_expression_prediction.Rd  rrho_ij.Rd  rrho_intersect.Rd  rrho_ldfit_prediction.Rd  rrho_normalize.Rd  rrho_permutation.Rd  rrho_rectangle.Rd  rrho_rectangle_min.Rd  rrho_rectangle_min_ea.Rd  setoptions.Rd  setoptions.rrho.Rd
perf/: Makefile.am  p-longdouble.c  p-rrho-permutation-ea.c  p-rrho-permutation.c  p-rrho.c
src/: Makefile.am  Makevars.in  RedRibbon.h  config.h.in  correlation.c  correlation.h  ea_initial.c  expression_predict.c  intersect.c  ldfit_predict.c  normalize.c  permutation.c  r.c  rectangle.c  rectangle_min.c  rectangle_min_ea.c  rrho.c  rrho.h  test-perm.R
src/R/: .Rbuildignore  DESCRIPTION  LICENCE  NAMESPACE  configure.ac
src/R-test/: test-plot.R
src/R/R/: rrho.R
src/R/src/: RedRibbon.h  ea_initial.c  normalize.c  permutation.c  r.c  rectangle_min_ea.c  rrho.c
src/R/vignettes/: RedRibbon.Rmd
src/ale-1.1/: Makefile.in  config.h.in  configure.ac
src/ale-1.1/m4/: libtool.m4
src/ale-1.1/perf/: Makefile.am  Makefile.in  p-alg-ax-b-ols-solve.c  p-hash.c  p-portability-getrandom.c  p-stats-std-rand.c
src/ale-1.1/src/: Makefile.am  Makefile.in  ale.h  btree-funcs.c  btree.c  error.c  exparser.c  fileutils.c  knn.c  portability.c  process.c  sl_list.c  sort.c  stringutils.c
src/ale-1.1/src/ale/: algebra.h  bitset.h  ea.h  error.h  exparser.h  fileutils.h  hash.h  index.h  interpolation.h  knn.h  math.h  matrix.h  memory.h  portability.h  portability.h.in  process.h  siphash24.h  sl_list.h  sort.h  stats.h  stringutils.h  vector.h
src/ale-1.1/src/math/: algebra.c  math.c  matrix.c  optimisation.c
src/ale-1.1/src/stats/: base.c  beta.c  binom.c  ecdf.c  hyper.c  kolmogorov.c  norm.c  normalize.c  permutation.c  poisson.c  unif.c
src/ale-1.1/test/: Makefile.am  Makefile.in  t-alg-ax-b-ols-solve-full.c  t-alg-ax-b-ols-solve.c  t-alg-l-inverse.c  t-alg-lx-b-solve.c  t-alg-opposite-v.c  t-alg-u-inverse.c  t-alg-ux-b-solve.c  t-bitset.c  t-btree-init.c  t-btree-insert.c  t-btree-mknode.c  t-btree-search.c  t-btree-split-internal-child.c  t-btree-split-right-leaf.c  t-classifier-sl.c  t-ea.c  t-error-ret.c  t-fileutils-gzfopen.c  t-fileutils-isgzip.c  t-index.c  t-knn.c  t-math-beta.c  t-math-cmp-double.c  t-math-digamma.c  t-math-gamma.c  t-math-ibeta.c  t-math-lbeta.c  t-math-rilgamma.c  t-math-riugamma.c  t-matrix-filter-rows.c  t-matrix-init-destroy.c  t-matrix-read.c  t-mkpath-fopen.c  t-optimisation-gradient-descent.c  t-portability-getrandom.c  t-process-popen.c  t-rmpath.c  t-skiplist.c  (+51 more)
src/ale-1.3/: Makefile.am  Makefile.in  README  aclocal.m4  configure.ac
src/ale-1.3/m4/: ale_prog_cc_c11.m4
src/ale-1.3/perf/: Makefile.am  Makefile.in  p-alg-ax-b-ols-solve.c  p-bitset.c  p-hash.c  p-portability-getrandom.c  p-stats-std-rand.c
src/ale-1.3/src/: Makefile.am  Makefile.in  ale.h  btree.c  daemon.c  ea.c  exparser.c  graph.c  index.c  memory.c  netutils.c  portability.c  process.c  random.c  siphash24.c  sl_list.c  symbols.c
src/ale-1.3/src/ale/: algebra.h  bitset.h  btree.h  daemon.h  graph.h  hash.h  math.h  netutils.h  optimisation.h  parser.h  portability.h  portability.h.in  random.h  skiplist.h  sl_list.h  stack-scalars.h  stack.h  stats-normalize.h  stats.h  stringutils.h  symbols.h  vector.h
src/ale-1.3/src/math/: algebra.c  interpolation.c  matrix.c
src/ale-1.3/src/parser/: first.c  follow.c  grammar.c  items.c  shift-reduce.c
src/ale-1.3/src/stats/: F.c  base.c  beta.c  categorical.c  ecdf.c  entropy.c  gamma.c  kerneldensity.c  norm.c  poisson.c  student.c  unif.c
src/ale-1.3/test/: Makefile.am  Makefile.in  asntoowner.txt  ipv4toasn.txt  rir-ripencc.txt  t-alg-LLt-cholesky.c  t-alg-ax-b-ols-solve-full.c  t-alg-ax-b-ols-solve.c  t-alg-ax-b-solve.c  t-alg-det.c  t-alg-lup-pivoting.c  t-alg-lx-b-solve.c  t-alg-qr-qtb-householder.c  t-alg-symmetric-definite-det.c  t-alg-symmetric-definite-inv.c  t-alg-transpose.c  t-alg-u-inverse.c  t-alg-ux-b-solve.c  t-bitset.c  t-btree-slice.c  t-btree-split-leaf-child.c  t-btree-split-right-internal.c  t-btree-split-root.c  t-exparser.c  t-graph.c  t-hash.c  t-index.c  t-interpolation-linear.c  t-math-ibeta.c  t-math-lgamma.c  t-math-trigamma.c  t-memory.c  t-mkpath.c  t-netutils.c  t-parser-first.c  t-parser-follow.c  t-parser-grammar.c  t-portability-strcasestr.c  t-random-getrandom.c  t-random-rand-u64.c  (+44 more)
src/credribbon-1.0/: Makefile.in  README  aclocal.m4  config.h.in  configure.ac
src/credribbon-1.0/perf/: Makefile.am  Makefile.in  p-longdouble.c  p-rrho-permutation-ea.c  p-rrho-permutation.c  p-rrho.c
src/credribbon-1.0/src/: Makefile.am  Makefile.in  cRedRibbon.c  correlation.c
src/credribbon-1.0/test/: Makefile.am  Makefile.in  t-expression-prediction.c  t-ldfit-prediction.c  t-rrho-generic.c  t-rrho-hyper.c  t-rrho-permutation-generic-shuffle.c  t-rrho-permutation-generic.c  t-rrho.c  (+3 more)
src/credribbon-1.1/: Makefile.am  Makefile.in  configure  configure.ac
src/credribbon-1.3/: README  config.h.in  configure.ac
test/: Makefile.am  t-expression-prediction.c  t-ldfit-prediction.c  t-rrho-generic.c  t-rrho-hyper.c  t-rrho-intersect.c  t-rrho-permutation-generic-shuffle.c  t-rrho-permutation-generic.c  t-rrho-r-rectangle-min-ea.R  t-rrho-r-rectangle.R  t-rrho-rectangle-min-ea.c  t-rrho-rectangle-min.c  t-rrho-rectangle.c  t-rrho.c
tests/: testthat.R
tests/testthat/: test-normalize.R  test-rrho-r-rectangle-min-ea.R  test-s3-quadrants-permutation.R  test-s3-quadrants.R
vignettes/: RedRibbon.Rmd  RedRibbon.html
(+31 files in other folders)
